@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: LINES TERMINATED BY only supports newline '\n' right now
